--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,22 @@ footer a {
     max-height: 100vh;
     overflow-y: auto;
 }
-
+#data-container > #key-numbers {
+    margin-bottom: 1%;
+}
+#data-container > #viz {
+    min-height: 100vh;
+}
+/*
+#data-container > #viz > div {
+    float: left;
+} */
+.top-word {
+    padding: 1%;
+}
+.top-word > :nth-child(2) {
+    text-align: right
+}
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
