--- a/templates/index.html
+++ b/templates/index.html
@@ -9,19 +9,20 @@
     <link rel="stylesheet" href="/static/node_modules/material-icons/iconfont/material-icons.css">
     <link rel="stylesheet" href="/static/node_modules/c3/c3.min.css">
     <link rel="stylesheet" href="/static/css/main.css">
-
+    
+    <script src="/static/vendor/moment.js"></script>
     <script src="/static/node_modules/vue/dist/vue.min.js"></script>
     <script src="/static/node_modules/vue-material/dist/vue-material.min.js"></script>
     <script src="/static/node_modules/d3/dist/d3.min.js"></script>
     <script src="/static/node_modules/d3-scale/dist/d3-scale.min.js"></script>
     <script src="/static/node_modules/d3-cloud/build/d3.layout.cloud.js"></script>
-
+    
     <script src="/static/js/util.js"></script>
     <script src="/static/js/WordCloud.js"></script>
     <script src="/static/js/BarChart.js"></script>
     <script src="/static/js/DonutChart.js"></script>
     <script src="/static/js/main.js"></script>
-
+    
 </head>
 <body>
     <style>
@@ -40,6 +41,7 @@
                 </md-app-toolbar>
                 
                 <md-app-drawer md-permanent="full">
+                    <loading-cover-up :loading="topics === 5"></loading-cover-up>
                     <md-toolbar class="md-transparent" md-elevation="0">
                         Topics
                     </md-toolbar>
@@ -53,7 +55,7 @@
                     </md-list>
                 </md-app-drawer>
                 
-                <md-app-content id="data-container">
+                <md-app-content id="data-container" style="overflow: hidden;">
                     <div id="key-numbers" class="md-layout-item md-layout md-size-100 md-center">
                         <div v-for="topWord in topWords" class="top-word md-layout-item md-elevation-5"> 
                             <div class="md-title">
@@ -67,12 +69,16 @@
                     </div>
                     <div id="viz" class="md-layout-item md-layout md-size-100">
                         <div class="md-layout-item md-size-40">
-                            <div class="md-title">Tone</div>
-                            <d3-donut-chart id="donut-chart-word-types" :data="topWords" height="w:75"></d3-donut-chart>
+                            <loading-cover-up :loading="loadingStatus.wordCounts"></loading-cover-up>
+                            <div class="md-title" style="text-align: center;">Most Frequent Words</div>
+                            <div style="height: 50vh;">
+                                <d3-word-cloud id="word-cloud" :data="wordCounts"></d3-word-cloud>
+                            </div>
                         </div>
                         <div class="md-layout-item md-size-60">
-                            <div class="md-title">10 Word Mentions</div>
-                            <div class="md-layout" style="    height: 50vh;">
+                            <loading-cover-up :loading="loadingStatus.top10"></loading-cover-up>
+                            <div class="md-title" style="text-align: center;">10 Word Mentions</div>
+                            <div class="md-layout" style="height: 50vh;">
                                 <div class="md-layout-item md-size-50">
                                     <div class="md-caption" style="text-align: right; padding-right: 1%;">Negative Words</div>
                                     <d3-bar-chart id="bar-chart-top-10-negative" :data="top10['negative']" :options="charOptions.bar_top10_neg"></d3-bar-chart>
@@ -83,19 +89,47 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="md-layout-item md-size-40">
-                            <div class="md-caption" style="padding-left: 1%;">Top 10 Neutral Words</div>
+                        <div class="md-layout-item md-size-25" style="height: 70vh">
+                            <loading-cover-up :loading="loadingStatus.top10"></loading-cover-up>
+                            <div class="md-title" style="text-align: center;">Top 10 Neutral Words</div>
                             <d3-bar-chart id="bar-chart-top-10-neutral" :data="top10['neutral']" :options="charOptions.bar_top10_neut"></d3-bar-chart>
                         </div>
-                        <div id="word-cloud"></div>
-                        <div id="bar-chart-word-count"></div>
+                        <div class="md-layout-item md-size-50">
+                            <loading-cover-up :loading="loadingStatus.topWords"></loading-cover-up>
+                            <div class="md-title" style="text-align: center;">Tone</div>
+                            <d3-donut-chart id="donut-chart-word-types" :data="topWords"></d3-donut-chart>    
+                        </div>
+                        <div class="md-layout-item md-size-25" >
+                            <loading-cover-up :loading="loadingStatus.articles"></loading-cover-up>
+                            <div class="md-title" style="text-align: center;">News Feed</div>
+                            <div style="max-height: 70vh; overflow-y: scroll; overflow-x: hidden;">
+                                <md-card v-for="article in articles" class="article">
+                                    <md-card-media-cover>
+                                        <md-card-media md-ratio="16:9">
+                                            <img :src="article.urlToImage">
+                                        </md-card-media>
+                                        
+                                        <md-card-area>
+                                            <md-card-header>
+                                                <span class="md-subhead">
+                                                    <a :href="article.url" target="__blank">
+                                                        %(article.title)%
+                                                    </a>
+                                                </span>
+                                                <span class="md-caption">by %(article.author)%, %(moment(article.publishedAt).fromNow())%</span>
+                                            </md-card-header>
+                                        </md-card-area>
+                                    </md-card-media-cover>
+                                </md-card>
+                            </div>
+                        </div>
                     </div>
                 </md-app-content>
             </md-app>
         </div>
     </div>
     <footer>
-    <a href="https://newsapi.org" target="_blank" rel="noopener noreferrer">Powered by News API</a>
+        <a href="https://newsapi.org" target="_blank" rel="noopener noreferrer">Powered by News API</a>
     </footer>
 </body>
 </html>
